# splitx

./: .gitignore  Cargo.toml  README.md  cleanup.sh  run.sh
src/: lib.rs  main.rs
test/: README.md  test.csv
